optimiza FileRepository con validación de columnas y persistencia segura